docs/stylesheets/msdl.css
/* Taken from the AtlasOS docs: https://github.com/Atlas-OS/docs/blob/master/docs/stylesheets/msdl.css */

:root {
    --md-dropdown-icon-dark: url('data:image/svg+xml;base64,PHN2ZyB2aWV3Qm94PSIwIDAgMjQgMjQiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+PHBhdGggZD0ibTcuNzE1IDguMjk1IDQuNTggNC41OCA0LjU5LTQuNTggMS40MSAxLjQxLTYgNi02LTZ6IiBmaWxsPSIjYmVjMWM2Ii8+PC9zdmc+');
    --md-dropdown-icon-light: url('data:image/svg+xml;base64,PHN2ZyB2aWV3Qm94PSIwIDAgMjQgMjQiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+PHBhdGggZD0ibTcuNzE1IDguMjk1IDQuNTggNC41OCA0LjU5LTQuNTggMS40MSAxLjQxLTYgNi02LTZ6IiBmaWxsPSIjMjEyMTIxIi8+PC9zdmc+Cg');
}

@media screen {
    [data-md-color-scheme=slate] {
        --md-dropdown-icon: var(--md-dropdown-icon-dark)
    }

    [data-md-color-scheme=default] {
        --md-dropdown-icon: var(--md-dropdown-icon-light)
    }
}

.md-typeset .admonition.grey-tip,
.md-typeset details.grey-tip {
    border-color: #9e9e9e
}

.md-typeset .grey-tip>.admonition-title,
.md-typeset .grey-tip>summary {
    background-color: #9e9e9e1a
}

.md-typeset .grey-tip>.admonition-title::before,
.md-typeset .grey-tip>summary:before {
    background-color: #9e9e9e;
    -webkit-mask-image: var(--md-admonition-icon--tip);
    mask-image: var(--md-admonition-icon--tip)
}

#msdl-ms-content,
#msdl-please-wait,
#msdl-processing-error,
#msdl-download,
#product-languages-error,
.row-padded-bottom,
.row-padded {
    display: none;
}

#msdl-processing-error {
    line-height: normal;
    color: #d16464;
    max-width: 60%;
}

#msdl-error-code {
    color: var(--md-code-hl-number-color);
    font-weight: bold;
}

select {
    position: relative;
    overflow: hidden;
    border: .1rem solid;
    border-radius: .1rem;
    font-weight: 400;
    font-family: inherit;
    font-size: inherit;
    margin-bottom: 0.3em;
    background: #0000 calc(100% - 7px) 50%/20px no-repeat;
    background-image: var(--md-dropdown-icon);
    background-repeat: no-repeat;
    color: var(--md-typeset-color) !important;
    padding-top: 0.9em;
    padding-bottom: 0.9em;
    text-align-last: center;
    appearance: none;
    width: 100%;
    margin-top: 0.25em;
}

option {
    background-color: var(--md-default-bg-color);
}

#submit-sku {
    width: 100%;
}

.msdl-button-container {
    display: flex;
    width: 100%;
}

.msdl-button {
    flex: 1;
    border: .1rem solid;
    border-color: currentcolor;
    border-radius: .1rem;
    color: var(--md-primary-fg-color);
    cursor: pointer;
    display: inline-block;
    font-weight: 700;
    padding: .625em 2em;
    transition: color 125ms, background-color 125ms, border-color 125ms;
    min-width: 0%;
    overflow: hidden;
}

.msdl-button:hover {
    background-color: var(--md-accent-fg-color);
    border-color: var(--md-accent-fg-color);
    color: var(--md-accent-bg-color);
}

.centerMsdl {
    margin-top: -0.9em;
}

